--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,20 @@
 <p>{{message}}</p>
 <app-post [fromParent]='parentMessage' (messageEvent)='reciveMessage($event)'></app-post>
 <p>{{fromChildOutPut}}</p>
+
+<img src="{{imgUrl}}" alt="">
+<img [src]="imgUrl" alt="">
+
+
+
+<!-- event binding -->
+<button (click) = 'buttonClick()' >Click Me</button>
+
+<!-- event filtering -->
+<input type="text" (keyup.enter)="onKeyup($event)">
+
+<!-- temple varibale -->
+<input type="text" (keyup.enter)="onKeyupTemplete(username.value)" #username>
+
+<!-- two way data binding -->
+<input type="text" [(ngModel)]="userName" (keyup.enter)="onkeyupTwoWayDataBinding()">
